framec_tests/language_specific/typescript/v3_mir/positive/forward_trailing_whitespace.frm
@target typescript

system S {
    machine:
        $A {
            e() {
                => $^   
            }
        }
}

