framec_tests/language_specific/typescript/v3_mir/negative/forward_trailing_tokens.frm
@target typescript

system S {
    machine:
        $A {
            e() {
                => $^ extra
            }
        }
}

